--- a/css/style.css
+++ b/css/style.css
@@ -1,74 +1,101 @@
 #my-header
 {
-    height: 500px;
-    background-color: #44dede;
+    height: 400px;
+    padding-top: 100px;
+    text-align: center;
 }
 
-    #my-header h1
+    #my-header img
     {
-        color:#ffffff;
-        font-family:'Trebuchet MS';
-        text-align:center;
-        margin-top:200px;
-        text-transform:uppercase
+        border: 20PX solid #5ebaba;
+        border-radius: 5px;
     }
+
+    #my-header span
+    {
+        color: #c65c22;
+        font-family: 'Trebuchet MS';
+        text-align: center;
+        margin-top: 200px;
+        text-transform: lowercase;
+        font-size: 40px;
+    }
+
+#introduce
+{
+    font-family: 'Gafata', sans-serif;
+    color: #383838;
+    font-size: 35px;
+}
+
+#description
+{
+    font-family: 'Gafata', sans-serif;
+    color: #383838;
+    font-size: 20px;
+}
 
 #links
 {
-    position:fixed;
-    text-align:right;
-    width:100%
+    position: fixed;
+    text-align: right;
+    width: 100%;
 }
-    #links a
+
+
+    #links a, #links
     {
-        
+        text-transform: uppercase;
+        color: #ffffff;
+        text-decoration: none;
+        font-size: 15px;
+        font-family: 'Trebuchet MS';
+        font-weight: bold;
     }
-#links a, #links
-{
-    text-transform:uppercase;
-    color:#ffffff;
-    text-decoration:none;
-    font-size:15px;
-    font-family:'Trebuchet MS';
-    font-weight:bold
-    
-    
-}
-#my-photo span
-{
-    max-width:50px;
-    text-align:left;
-    color:#ffffff;
-    
-}
-#my-photo img
-{
-    margin-bottom:10px
-    
-}
-#my-photo
-{
-    background-color: #5ebaba;
-    top:30px;
-    border-radius:5px;
-    margin-top:100px;
-    position:fixed;
-    text-align:center;
-    padding:20px;
-    max-width:106px
-}
+
 #navigation
 {
-    background-color:gray;
-    height:50px;
-    position:fixed;
-    width:100%;
-    opacity:0.1;
-    
-    
+    background-color: #fdc44f;
+    height: 50px;
+    position: fixed;
+    width: 100%;
 }
+
 body
 {
-    background-color:#fcae0d;
-    height:2000px;
+    background-color: #f5f5f5;
+    height: 2000px;
+}
+
+.post
+{
+    border: 3px solid #5ebaba;
+    border-radius: 5px;
+    margin-bottom: 30px;
+    height:200px;
+    
+}
+.post-summary
+{
+    margin-left:15px;
+    margin-right:15px;
+    text-align:justify
+}
+.title
+{
+    margin-top:15px;
+    margin-left:15px;
+    font-weight: bold;
+    font-family: 'Gafata', sans-serif;
+    color: #383838;
+    font-size: 20px;
+}
+.read-more
+{
+    float:right;
+    color:#5ebaba !important;
+    font-family: 'Gafata', sans-serif;
+    color: #383838;
+    font-size: 20px;
+    margin-right:15px
 }
